--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
             <img class="dog" src="./Group 8.png" alt="">
 
             <section class="happy-section">
-                <img class=".human" src="./Group 11.png" alt="">
-                <h2 class="main-title">HAPPY PETS,<br>HAPPY HUMANS</h2>
-                <div class="decorative-text">gfigosogdisdgiqgndgsigjldsgsidnggiojgrds
-                    gsggssg fkdkasgoksagksdgk</div>
-                <h3 class="best-in">We are the best in:</h3>
-        </main>
-    </div>
-</body>
+                    <img class="img2" src="./Group 10.svg" alt="">
+                    <img class=".human" src="./Group 11.png" alt>
+                    <h2 class="main-title">HAPPY PETS,<br>HAPPY HUMANS</h2>
+                    <div class="decorative-box">  
+                        <p class="decorative-text">gfigosogdisdgjggndgsigjidsgsidnggiojgfdsgsggssg fkdkosgoksogksdgk </p>
+                    </div>
+                </main>
+            </div>
+        </body>
 
 </html>
