--- a/index.html
+++ b/index.html
@@ -10,31 +10,52 @@
 
 <body>
     <div class="container">
-        <header>
-            <div class="logo"><img src="./Group 2.svg" alt=""></div>
-            <div class="nav-links">
-                <a href="#">Account</a>
-                <a href="#">Social media</a>
-            </div>
-            <img class="paw" src="./paw 1.svg" alt="">
-        </header>
-        <main>
-            <section class="hero">
-                <h1 class="dog-title">DOG.</h1>
-                <p class="subtitle">Your best friend is waiting for you.</p>
-                <a href="#" class="cta-button">Go to animals</a>
-            </section>
+        <section class="hero">
+            <header>
+                <div class="logo"><img src="./Group 2.svg" alt=""></div>
+                <div class="nav-links">
+                    <a href="#">Account</a>
+                    <a href="#">Social media</a>
+                </div>
+                <img class="paw" src="./paw 1.svg" alt="">
+            </header>
+            <h1 class="dog-title">DOG.</h1>
+            <p class="subtitle">Your best friend is waiting for you.</p>
+            <a href="#" class="cta-button">Go to animals</a>
             <img class="dog" src="./Group 8.png" alt="">
+        </section>
 
-            <section class="happy-section">
-                    <img class="img2" src="./Group 10.svg" alt="">
-                    <img class=".human" src="./Group 11.png" alt>
-                    <h2 class="main-title">HAPPY PETS,<br>HAPPY HUMANS</h2>
-                    <div class="decorative-box">  
-                        <p class="decorative-text">gfigosogdisdgjggndgsigjidsgsidnggiojgfdsgsggssg fkdkosgoksogksdgk </p>
-                    </div>
-                </main>
+        <section class="happy-section" id="about">
+            <img class="human" src="./Group 11.png" alt>
+            <div class="decorative-box">
+                <img class="img2" src="./Group 10.svg" alt="">
+                <h2 class="main-title">HAPPY PETS,<br>HAPPY HUMANS</h2>
+                <p class="decorative-text">gfigosogdisdgjggndgsigjidsgsidnggiojgfdsgsggssg fkdkosgoksogksdgk </p>
             </div>
-        </body>
+            <h2 class="bestitle">We are the best in</h2>
+                <div class="weare">
+                    <div class="square dark"></div>
+                    <div class="square light"></div>
+                    <div class="square dark"></div>
+                    <div class="square dark"></div>
+                    <div class="square light"></div>
+                    <div class="square dark"></div>
+                </div>
+        <section class="shop">
+            <h2 class="shopan">Our animals</h2>
+            <div>
+                <div class="button-line">
+                    <button class="button-shop btncolor">Cats</button>
+                    <button class="button-shop btn2color">Dogs</button>
+                    <button class="button-shop btncolor">Others</button>
+                </div>
+            </div>
+        </section>    
+
+
+        </section>
+
+    </div>
+</body>
 
 </html>
