--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="#Account">Account</a>
                     <a href="#Social-media">Social media</a>
                 </div>
-                <a href="http://127.0.0.1:3006/index.html"><button class="btnlang">RUS</button></a>
+                <a href="https://danil-del.github.io/laptev2025projectRussian/"><button class="btnlang">RUS</button></a>
                 <nav class="navbar">
                     <button class="burger" id="burger" aria-label="Открыть меню">
                         <span class="line"></span>
