--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         block.appendChild(img);
 
                         block.addEventListener('click', () => {
-                            window.open('http://127.0.0.1:3000/index.html', '_blank');
+                            window.open('https://danil-del.github.io/catpageEN/', '_blank');
                         });
 
                         setTimeout(() => {
