--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </header>
             <h1 class="dog-title">DOG.</h1>
             <p class="subtitle">Your best friend is waiting for you.</p>
-            <a href="#animal" class="cta-button">Go to animals</a>
+            <a href="#animals" class="cta-button">Go to animals</a>
             <img class="dog" src="./Group 8.png" alt="">
         </section>
 
