--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </header>
             <h1 class="dog-title">DOG.</h1>
             <p class="subtitle">Your best friend is waiting for you.</p>
-            <a href="#animals" class="cta-button">Go to animals</a>
+            <a href="#animal" class="cta-button">Go to animals</a>
             <img class="dog" src="./Group 8.png" alt="">
         </section>
 
@@ -157,7 +157,8 @@
                 <img src="./icons8-телеграм (1).svg" class="tg" alt="">
             </div>
             <div class="contacts">
-                <a href="tel:+73832149291"></a>
+                <h3 class="hc-1">Наши контакты:</h3>
+                <a class="hc" href="tel:+73832149291">+73832149291</a>
             </div>
         </section>
         <a href="#top" id="scroll-to-top" class="scroll-to-top-button"><img src="./Arrow 2.svg" alt=""></a>
