--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
             <div class="decorative-box">
                 <img class="img2" src="./Group 10.svg" alt="">
                 <h2 class="main-title">HAPPY PETS,<br>HAPPY HUMANS</h2>
-                <p class="decorative-text">gfigosogdisdgjggndgsigjidsgsidnggiojgfdsgsggssg fkdkosgoksogksdgk </p>
+                <p class="decorative-text">Our shelter is not just a temporary home for animals, it is a place where
+                    each pet finds hope for a new, happy life. We believe that a happy dog ​​makes a happy person!
+                </p>
             </div>
             <img class="human" src="./Group 11.png" alt>
             <h2 class="bestitle" id="About us">We are best in</h2>
@@ -65,10 +67,10 @@
             <div class="orangebl"></div>
             <div class="whyyou">
                 <h2 class="titlewhy">Why you should choose us</h2>
-                <p class="textwhy">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem dicta
-                    necessitatibus neque, ullam rem atque id dolorem quod nisi, modi, natus soluta maiores sed delectus
-                    voluptas non quas alias? Expedita eum, ad quod nemo amet harum omnis distinctio assumenda tempore
-                    ipsa quae impedit. Officiis provident molestiae natus doloremque temporibus dolore!</p>
+                <p class="textwhy">We offer each animal not only temporary shelter, but also sincere care.
+                    Our team consists of experienced veterinarians, volunteers and simply caring people. We carefully
+                    select families for our wards, ensuring the most comfortable adaptation. By choosing us, you
+                    choose trust, safety and love</p>
             </div>
             <img class="cutedog" src="./Group 18.png" alt="">
         </section>
@@ -111,10 +113,10 @@
             <div class="don">
                 <div class="textdon">
                     <h3 class="donationmotivation">Donate money to the shelter to make the animals feel even better</h3>
-                    <p class="donatemot"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae debitis,
-                        delectus
-                        ullam possimus consequatur laborum necessitatibus obcaecati porro aut temporibus maxime fugiat
-                        tempore dolorum quidem! Ad a ullam sit odit?</p>
+                    <p class="donatemot"> Every donation provides food, medicine and care for animals left without a
+                        home. Your help helps us take care of them daily, provides treatment and finds new caring
+                        owners. Together we can do more!
+                    </p>
                     <img class="footimg" src="./footprint.png" alt="">
                 </div>
                 <img class="imgline" src="./Rectangle 41.png" alt="">
@@ -157,7 +159,7 @@
                 <img src="./icons8-телеграм (1).svg" class="tg" alt="">
             </div>
             <div class="contacts">
-                <h3 class="hc-1">Наши контакты:</h3>
+                <h3 class="hc-1">Contacts:</h3>
                 <a class="hc" href="tel:+73832149291">+73832149291</a>
             </div>
         </section>
